# dwm

./: .gitignore  Makefile  config.def.h  config.h  dwm.c  meson.build  run.sh  test.sh
